--- a/style.css
+++ b/style.css
@@ -63,3 +63,68 @@ h1 {
     display: flex;
     flex-direction: column;
 }
+
+.uppermid {
+    display: flex;
+    flex-direction: column;
+}
+
+.umtop {
+    display: flex;
+    justify-content: center;
+    margin: 16px;
+}
+
+.umbottom {
+    display: flex;
+    justify-content: center;
+}
+
+.card1, .card2, .card3, .card4 {
+    margin: 0 32px;
+    max-width: 208px;
+    
+}
+
+.c1img, .c2img, .c3img, .c4img {
+    display: flex;
+    justify-content: center;
+    border: 4px solid #3882F6;
+    border-radius: 8px;
+}
+
+.c1cap, .c2cap, .c3cap, .c4cap {
+    text-align: center;
+    color: #445264;
+    font-size: 18px;
+}
+
+h2 {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+}
+
+.lowermid {
+    display: flex;
+    flex-direction: column;
+    height: 200px;
+    background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
+}
+
+.quote {
+    font-size: 36px;
+    font-weight: lighter;
+    font-style: italic;
+    color: #1F2937;
+    margin: 0;
+}
+
+.quoter {
+    font-size: 24px;
+    font-weight: bolder;
+    color: #1F2937;
+    padding-left: 450px;
+}
